--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #e5e5f7;
             opacity: 0.8;
-            background-image: radial-gradient(circle at center center, #444cf7, #e5e5f7), repeating-radial-gradient(circle at center center, #444cf7, #444cf7, 10px, transparent 20px, transparent 10px);
-            background-blend-mode: multiply;
         }
-        /* From Uiverse.io by njesenberger */
         .button {
             -webkit-appearance: none;
             appearance: none;
@@ -101,9 +97,45 @@
             background-color: rgba(0, 0, 0, .15);
             box-shadow: 0 1px 1px 0 rgba(255, 255, 255, .75), inset 0 2px 2px rgba(0, 0, 0, .25);
         }
+
+        /* From Uiverse.io by jeremyssocial */
+        .container {
+            /* Basic dimensions and centering */
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            /* Dark mode colors and gradient */
+            background: #121212; /* Fallback for browsers that don't support gradients */
+            background: linear-gradient(
+                135deg,
+                #121212 25%,
+                #1a1a1a 25%,
+                #1a1a1a 50%,
+                #121212 50%,
+                #121212 75%,
+                #1a1a1a 75%,
+                #1a1a1a
+            );
+            background-size: 40px 40px;
+
+            /* Animation */
+            animation: move 4s linear infinite;
+        }
+
+        @keyframes move {
+            0% {
+                background-position: 0 0;
+            }
+            100% {
+                background-position: 40px 40px;
+            }
+        }
     </style>
 </head>
-<body class="min-h-screen flex items-center justify-center">
+<body class="min-h-screen flex items-center justify-center container">
     <div class="flex flex-col items-center space-y-8">
         <div class="flex space-x-8">
             <!-- Currency Converter -->
