--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                         <option value="BRL">BRL - ריאל ברזילאי</option>
                         <option value="ZAR">ZAR - ראנד דרום אפריקאי</option>
                         <option value="KPW">KPW - וון צפון קוריאני</option>
+                        <option value="VES">VES - בוליבר ונצואלי</option>
+                        <option value="KWD">KWD - דינר כוויתי</option>
                     </select>
                 </div>
                 <div class="mb-4">
@@ -197,6 +199,8 @@
                         <option value="ZAR">ZAR - ראנד דרום אפריקאי</option>
                         <option value="ILS">ILS - שקל ישראלי</option>
                         <option value="KPW">KPW - וון צפון קוריאני</option>
+                        <option value="VES">VES - בוליבר ונצואלי</option>
+                        <option value="KWD">KWD - דינר כוויתי</option>
                     </select>
                 </div>
                 <button onclick="convertCurrency()" class="w-full bg-blue-500 text-white p-2 rounded">המר</button>
